--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ NODE_ENV = development
 PORT = 8000
 //Hier wird die URL für die datenbank übergeben
 DATABASE = mongodb://localhost:27017/myProject
+JWT_SECRET = §$%&HNNDJW??HGGBD$??NML@ndewiuhfdwq
+JWT_EXPIRES_IN = 90d
