--- a/config.env
+++ b/config.env
@@ -4,6 +4,7 @@ PORT = 8000
 DATABASE = mongodb://localhost:27017/myProject
 JWT_SECRET = §$%&HNNDJW??HGGBD$??NML@ndewiuhfdwq
 JWT_EXPIRES_IN = 90d
+JWT_COOKIE_EXPIRES_IN = 90
 
 EMAIL_USERNAME = e5fe5b1599b9a4
 EMAIL_PASSWORD = 92e79d30a26048
